<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MultimediaProjectActivity!</string>
    <string name="app_name">MoViA Tool</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="comment_hint">Comment the scene</string>
    <string name="zero_time">0:00:00</string>
    <string name="cancel">Cancel</string>
    <string name="textnavigation">Textual Navigation</string>
    <string name="navigation_title">Navigation - Choose your thumbnail to navigate through the video</string>
    <string name="chooseAuthor">Choose additional authors of annotations:</string>
    <string name="ok">OK</string>
    <string name="setauthorplease">You need to choose an author</string>
    <string name="options">Change annotations author</string>
    <string name="createNewAuthor">Or create new</string>
    <string name="chooseAuthorName">Choose annotation author</string>
    <string name="selectScene">Scene Selection</string>
    <string name="jump">Jump to this scene?</string>
    <string name="comment">Comment</string>
    <string name="at">at</string>
    <string name="chooseVideo">Choose a video to annotate:</string>
    <string name="start">Start</string>
    <string name="avatar">Avatar</string>
    <string name="removeAnnotation">Are you sure you want to remove this annotation?</string>
    <string name="editAnnotation">Edit Annotation</string>
    <string name="editOrRemoveAnnotation">Do you want to edit or remove this annotation?</string>
    <string name="edit">Edit</string>
    <string name="editorremove">Edit/Remove</string>
    <string name="remove">Remove</string>
    <string name="inkOn">Ink Annotation is On</string>
    <string name="inkOff">Ink Annotations is Off</string>
    <string name="inknavigation">Ink Navigation</string>
    <string name="clear">Clear</string>
    <string name="chooseUser">Choose your Google username:</string>
    <string name="logo">Logo</string>
    <string name="addFirst">Add the text first!</string>
    <string name="viewContextInfo">Context</string>
    <string name="contextInfo">Context Information</string>
    <string name="username">Username</string>
    <string name="annotationType">Annotation Type</string>
    <string name="date">Date</string>
    <string name="event">Event</string>
    <string name="deviceModel">Device Model</string>
    <string name="deviceApi">Device API</string>
    <string name="location">Location</string>
    <string name="confirmEvent">Please, confirm your event:</string>
    <string name="eventOk">Yes, that is my current event.</string>
    <string name="eventNok">No, that is not my current event.</string>
    <string name="annRemoved">Annotation Removed</string>
    <string name="annEdited">Annotation Edited</string>
    <string name="audioOn">Audio Annotation is On</string>
    <string name="audioOff">Audio Annotation is Off</string>
    <string name="audionavigation">Audio Navigation</string>
    <string name="audio">Audio</string>
    <string name="ink">Ink</string>
    <string name="text">Text</string>
    <string name="msgBodyVideo">A video file is attached to this message.</string>
    <string name="msgBodyXml">A xml annotation file is attached to this message.</string>
    <string name="msgBodyIwac">A json annotation file for the I+WaC-Editor tool is attached to this message.</string>
    <string name="msgSubject">Annotation file from</string>
    <string name="msgSubjectVideo">Video file from</string>
    <string name="msgSubjectIwac">I+WaC-Editor annotation file from</string>
    <string name="share">Share</string>
    <string name="invalideEmail">Invalid email</string>
    <string name="importXml">Import XML Annotation File</string>
    <string name="chooseApp">Choose the application</string>
    <string name="confirmShare">Do you want to share xxx annotation files?</string>
    <string name="shareAnnotation">Share Annotation</string>
    <string name="installFM">Please install a File Manager.</string>
    <string name="selectFileToImport">Select a XML annotation file to import</string>
    <string name="copySuccess">File successfully imported!</string>
    <string name="error">An error occurred.</string>
    <string name="xmlOnly">Only XML files are acceptable.</string>
    <string name="navigation">Navigate</string>
    <string name="chooseMainAuthor">Main author:</string>
    <string name="nowMainAuthor">Now the main author is</string>
    <string name="annotationsBy">Annotations by</string>
    <string name="cantremove">You can not remove annotations that are not yours.</string>
    <string name="cantedit">You can not edit annotations that are not yours.</string>
    <string name="overwrite">Overwrite annotation</string>
    <string name="confirmOverwrite">This point already have an annotation. Are you sure you want to overwrite?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noAnnotations">did not make annotations yet.</string>
    <string name="your">your</string>
    <string name="shareObs">Note: Only text annotations are shareable.</string>
    <string name="recordingOn">Audio recording is ON</string>
    <string name="recordingOff">Audio recording is OFF</string>
    <string name="inkDrawOn">Now you can draw on the video</string>
    <string name="inkDrawOff">Ink is OFF</string>
    <string name="turnAudioOff">Turn off the audio annotation before unpause the video.</string>
    <string name="playingAudio">Playing audio annotation.</string>
    <string name="turnAudioAnnotationOnOff">Do you want to turn on the audio annotations? If you choose yes, the video will be paused when audio annotations is played. It still will be possible to make audio annotations.</string>
    <string name="currentVideoDir">Current Directory:</string>
    <string name="chooseVideoDir">Choose Other Directory</string>
    <string name="empty">empty</string>
    <string name="choose">Choose</string>
    <string name="recordAnnotateQuestion">What would you like to do?</string>
    <string name="recordVideo">Record a video before annotating</string>
    <string name="annotateVideo">Annotate on a video that is already recorded</string>
    <string name="videoRecordingMsg">Please edit your video preferences.</string>
    <string name="videoQuality">Video quality:</string>
    <string name="lowQuality">Low</string>
    <string name="highQuality">High</string>
    <string name="fileName">File name:</string>
    <string name="videoRecordingHint">E.g. My video recording</string>
    <string name="savedTo">Video saved to \n</string>
    <string name="annotOld">Annotate an existing video</string>
    <string name="annotNew">Record a new video to annotate</string>
    <string name="capture">Capture</string>
    <string name="recapture">Recapture</string>
    <string name="finish">Finish</string>
    <string name="mark">Mark</string>
    <string name="marking">Mark</string>
    <string name="stop">Stop</string>
    <string name="markOk">Marking OK</string>
    <string name="overwriteVideo">The video will be overwritten</string>
    <string name="confirmOverwriteVideo">Are you sure you want to overwrite the captured video?</string>
    <string name="chooseFileToShare">Choose the file\'s type you want to share:</string>
    <string name="video">Video</string>
    <string name="txtAnnotations">Text Annotations</string>
    <string name="inkAnnotations">Ink Annotations</string>
    <string name="txtIwac">I+WaC-Editor Annotations</string>

</resources>