<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmShare"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tChooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseFileToShare"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroupFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txtAnnotations" />
        
        <RadioButton
            android:id="@+id/radioInk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inkAnnotations" />
        
        <RadioButton
            android:id="@+id/radioIwac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtIwac" />

        <RadioButton
            android:id="@+id/radioVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bShareAnEmOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/bShareAnEmCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>