<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videoRecordingMsg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videoQuality"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/highQualityRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/highQuality" />

        <RadioButton
            android:id="@+id/lowQualityRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowQuality" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fileName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:inputType="textCapWords"
        android:hint="@string/videoRecordingHint"
        android:id="@+id/videoFileNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/recordVideoButOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>
