<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordAnnotateQuestion"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroupRcordOrAnnotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/annotateRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/annotateVideo" />

        <RadioButton
            android:id="@+id/recordRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordVideo" />

    </RadioGroup>

    <Button
        android:id="@+id/recordOrAnnotateOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>