<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tEditOrRemoveAn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="true"
        android:paddingBottom="5dp"
        android:text="@string/editOrRemoveAnnotation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bWEditAn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/bWRemoveAn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove" />

        <Button
            android:id="@+id/bWCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>