<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <br.usp.icmc.movia.VideoViewCustom
        android:id="@+id/videoView1"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/tAnnotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoView1"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tAnnotation"
        android:orientation="vertical"
        android:visibility="visible" >

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/bPlay"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.87"
                android:text="@string/pause" />

            <TextView
                android:id="@+id/tDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bAdd"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/add" />

            <EditText
                android:id="@+id/editTextNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/bAdd"
                android:layout_toLeftOf="@id/bAdd"
                android:ems="10"
                android:hint="@string/comment_hint" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bInk"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/pen_off"
                android:text="@string/inkOff" />

            <Button
                android:id="@+id/bAudio"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/mic_off"
                android:text="@string/audioOff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bNavigation"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/nav"
                android:text="@string/navigation" />

            <Button
                android:id="@+id/bShare"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/share"
                android:text="@string/share" />

            <Button
                android:id="@+id/bContextInfo"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/info"
                android:text="@string/viewContextInfo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseMainAuthor"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerAuthors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            layout="@layout/multi_annotations" />
    </LinearLayout>

</RelativeLayout>