<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayoutDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/tNavBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/annotationsBy" />

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tNavBy"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text" />

        <RadioButton
            android:id="@+id/radioInk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ink" />

        <RadioButton
            android:id="@+id/radioAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio" />
    </RadioGroup>

    <Button
        android:id="@+id/bCancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bCancel"
        android:layout_below="@id/radioGroupType"
        android:layout_margin="10dp"
        android:fadeScrollbars="false" >

        <LinearLayout
            android:id="@+id/LinearLayoutNavDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>