<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tRemoveAn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="true"
        android:text="@string/removeAnnotation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bRemoveAnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/bRemoveAnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>